# CitrusHack2025

./: .gitignore  README.md  pyproject.toml
.github/workflows/: pull-request.yaml
app/: README.md  audioprocessing.py  gui.py  helper.py  main.py  test_audio  test_gui
